Updates to JD22 and libraw 21.2